--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,4 +1,5 @@
 @import "tailwindcss";
+@import "@flaticon/flaticon-uicons/css/all/all";
 
 @source '../../vendor/laravel/framework/src/Illuminate/Pagination/resources/views/*.blade.php';
 @source '../../storage/framework/views/*.php';
@@ -17,8 +18,19 @@
     --color-ocean-100: #f2e3d5;
 }
 
-.bg-hero{
-    background-image: url('./../../public/imgs/dev-team-blur.jpg');
+.bg-hero {
+    background-image: url("./../../public/imgs/dev-team-blur.jpg");
     background-position: center;
     background-size: cover;
+}
+
+.bg-instagram {
+    background: linear-gradient(
+        45deg,
+        #f09433 0%,
+        #e6683c 25%,
+        #dc2743 50%,
+        #cc2366 75%,
+        #bc1888 100%
+    );
 }
